# wasm-react-boilerplate

./: .gitignore  craco.config.js  package-lock.json  package.json
src/: App.tsx  index.css
wasm/: Cargo.toml
wasm/src/: lib.rs
